<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Multisalto</string>
    <string name="multisaltos">Multisalto</string>
    <string name="Radar">Radar</string>
    <string name="welcome">"Bienvenido a Multisaltos"</string>
    <string name="resgister">"REGISTRARSE"</string>
    <string name="Prepare">¡Prepara tu comunicación en momentos críticos!</string>
    <string name="name_register">"Nombre completo "</string>
    <string name="Complete">Completa tu información</string>
    <string name="one">una vez y la app hará el resto!</string>
    <string name="Imagesig">"Aparece un signo de pregunta "</string>
    <string name="dispositivosImgane">"Se puede observar dos telefonos que se conectan "</string>
    <string name="Terminos_Condiciones">"Términos y Condiciones"</string>
    <string name="aceptar_Checkbox">"Al aceptar estos Términos y Condiciones, reconoces que has leído, entendido y aceptas las condiciones detalladas en este documento."</string>
    <string name="aceptar_boton_TC">"ACEPTO"</string>
    <string name="introduccion_TC">"Bienvenido a Multisalto, una aplicación diseñada para permitir la comunicación en situaciones de emergencia a través de la red AdHoc, sin la necesidad de conexión a Internet. Al utilizar nuestra aplicación, aceptas los siguientes términos y condiciones.

Te recomendamos leerlos atentamente."</string>
    <string name="requisitos_titulo">"Requisitos de Acceso a la Información"</string>
    <string name="requisitos_texto">"Para utilizar Multisalto de manera efectiva, se requiere que la aplicación acceda a ciertos datos de tu dispositivo, que incluyen:
Ubicación: La aplicación necesita acceder a la ubicación en tiempo real de tu dispositivo para poder conectar con otras personas cercanas en situaciones de emergencia. Esta información solo se utilizará dentro del contexto de la aplicación y no se compartirá con terceros fuera de la red de emergencia.
Datos del Usuario: Se solicitarán ciertos datos personales, como tu nombre y número de teléfono, para facilitar la identificación y la conexión con otros usuarios en momentos críticos. Esta información se almacenará de manera segura en tu dispositivo y no será utilizada para fines distintos a la funcionalidad de la app.
Es importante tener en cuenta que Multisalto necesita acceso a estos datos para garantizar una comunicación efectiva y rápida durante una emergencia. Puedes desactivar el acceso a la ubicación o modificar los permisos en cualquier momento desde la configuración de tu dispositivo, pero esto puede afectar el funcionamiento adecuado de la aplicación."</string>
    <string name="limitaciones_titulo">"Limitaciones de Responsabilidad"</string>
    <string name="limitaciones_texto">"Multisalto no se hace responsable por los daños o pérdidas que puedan surgir debido al uso de la aplicación, incluyendo pero no limitado a la falta de cobertura, problemas técnicos o fallos de la red AdHoc. La app depende de la red de usuarios cercanos, lo que puede afectar su funcionamiento en ciertos contextos."</string>
    <string name="modificaciones_titulo">"Modificaciones de los Términos"</string>
    <string name="modificaciones_texto" tools:ignore="Typos">"Nos reservamos el derecho de modificar estos términos en cualquier momento. Las actualizaciones serán notificadas a través de la aplicación o mediante otros medios apropiados. Es responsabilidad del usuario revisar periódicamente los Términos y Condiciones para estar al tanto de cualquier cambio."</string>
    <string name="companero_ideal">"Tu acompañante ideal
en momentos de postdesastre"</string>
    <string name="mantente_salvo">"Mantente a salvo"</string>
    <string name="pedir_ayuda">"PEDIR AYUDA"</string>
    <string name="datos_Personales">"DATOS PERSONALES"</string>
    <string name="nombre_Apellido">"Nombre y Apellido"</string>
    <string name="numero_celular">"Número de celular"</string>
    <string name="datos_CEmergencia">"DATOS CONTACTO EMERGENCIA"</string>
    <string name="editar_datos">"EDITAR DATOS"</string>
    <string name="guardar_datos">"GUARDAR DATOS"</string>
    <string name="activar_teclado">Activar teclado</string>
    <string name="chat">CHAT</string>
    <string name="default_rta">Respuestas Predeterminadas</string>
    <string name="Si_ya_ra">Si ya recibiste ayuda</string>
    <string name="estoy_salvado">ESTOY A SALVO</string>
    <string name="boton_hola">Hola</string>
    <string name="boton_ayuda">Necesito Ayuda</string>
    <string name="boton_moverse">No puedo Moverme</string>
    <string name="boton_atrapado">Estoy Atrapado</string>
    <string name="Biblioteca">BIBLIOTECA</string>
    <string name="Kit_Emergencia">KIT PARA EMERGENCIAS</string>
    <string name="Alimentos_agua">ALIMENTOS\nY AGUA</string>
    <string name="Primeros_auxilios">PRIMEROS\nAUXILIOS</string>
    <string name="Equipos">EQUIPOS\nÚTILES</string>
    <string name="Ropa">ROPA</string>
    <string name="Docs">DOCUMENTOS</string>
    <string name="Otros">OTROS\nSUMINISTROS</string>
    <string name="Guia_Proc">GUÍA DE PROCEDIMIENTOS</string>
    <string name="Que_hacer">¿QUÉ HACER?</string>
    <string name="Sabias">¿SABÍAS QUE?</string>
    <string name="Cat_sismos">CATEGORIAS\nDE SISMOS</string>
    <string name="finalizar">FINALIZAR</string>
    <string name="Alimentos_agua_over">Alimentos y agua</string>
    <string name="es_clave_contar">Es clave contar con suficiente agua y alimentos, ya que en muchos terremotos el colapso de estructuras puede bloquear las salidas y dejarte atrapad@, haciendo necesario sobrevivir hasta que llegue el equipo de rescate. A continuación te dejamos una lista de lo primordial:</string>
    <string name="Alimentos">Alimentos no perecederos, como enlatados</string>
    <string name="Al_ser_enlatados">Al ser enlatados, duran más y no necesitan refrigeración, así que no tendrás que preocuparte por que se echen a perder</string>
    <string name="Agua_botella">Agua en botellas</string>
    <string name="es_esencial">es esencial porque el cuerpo necesita agua para funcionar correctamente, y la deshidratación puede afectar tu energía, concentración y salud</string>
    <string name="Abrelatas_manual">Abrelatas manual</string>
    <string name="Abrelatas_necesario">Necesario para abrir los ya mencionados enlatados y evitar cortes al intentar abrirlos con las manos</string>
    <string name="Parrilla">Parrilla de carbón o gas</string>
    <string name="Parrilla_contenido">permite cocinar alimentos si no hay electricidad o gas en casa tras un terremoto, asegurando que puedas comer de forma segura</string>
    <string name="En_resumen">En resumen, contar con estos elementos te permitirá mantenerte alimentad@, hidratad@ y segur@ en caso de quedar atrapad@ o sin servicios básicos tras un terremoto. Estar preparad@ puede marcar la diferencia mientras esperas ayuda.</string>
    <string name="Primeros_over">"Primeros auxilios"</string>
    <string name="kit_pa">"Tener un kit de primeros auxilios en un terremoto es crucial porque puedes sufrir cortes, golpes o heridas mientras esperas ayuda. Si quedas atrapad@ o los servicios médicos tardan en llegar, podrás atender lesiones básicas y evitar que empeoren."</string>
    <string name="Vendas">"Vendas, gasas, esparadrapo"</string>
    <string name="para_tapas">"para tapar heridas y evitar una futura infección"</string>
    <string name="mascarillas">"Mascarillas"</string>
    <string name="mascarilla_content">"ya que el aire puede llenarse de polvo y escombros, te ayudarán a proteger tus vías respiratorias"</string>
    <string name="agua_ox">Agua oxigenada</string>
    <string name="agua_content">para limpiar y desinfectar heridas en caso de cortes o raspaduras previniendo infecciones</string>
    <string name="crema_top">Crema tópica</string>
    <string name="crema_content">para aliviar irritaciones, quemaduras leves o picaduras que puedan ocurrir durante un terremoto, protegiendo la piel y evitando infecciones</string>
    <string name="analgesico">Analgésicos, antibióticos</string>
    <string name="analgesico_content">Analgésicos para aliviar dolor causado por golpes o lesiones y  antibióticos para combatir infecciones en heridas</string>
    <string name="Equipos_utiles">Equipos útiles</string>
    <string name="linterna">Linterna, pilas extra y un radio portátil</string>
    <string name="linterna_content">La linterna te permite ver en la oscuridad si se va la luz, el radio portátil te mantiene informad@ sobre la situación y las pilas extra aseguran que ambos sigan funcionando el tiempo necesario</string>
    <string name="tijeras">Tijeras, Cinta adhesiva, Llave inglesa o Navajas</string>
    <string name="tijeras_content">Estos objetos te ayudan a atender emergencias básicas como cortar, reparar o cerrar el paso de gas o agua tras un terremoto</string>
    <string name="ropa">Ropa</string>
    <string name="muda">Muda de ropa completa</string>
    <string name="muda_content">Es clave para mantenerte seco, limpi@ y cómod@ si tu ropa se daña o moja durante el terremoto, ayudando a prevenir enfermedades y malestar</string>
    <string name="guantes">Guantes</string>
    <string name="guantes_content">protegen tus manos al mover escombros, objetos cortantes o realizar tareas de emergencia, reduciendo el riesgo de heridas o infecciones</string>
    <string name="impermeable">Impermeable</string>
    <string name="impermeable_content">Te protege de la lluvia y la humedad si debes estar al aire libre, ayudando a mantenerte seco y evitar enfermedades por frío</string>
    <string name="Documentos">Documentos</string>
    <string name="copias">Copia de documentos, así como la póliza de seguros</string>
    <string name="copias_content">facilita trámites, identificaciones y reclamaciones tras un terremoto, especialmente si pierdes los originales</string>
    <string name="llaves">Copia de tus llaves</string>
    <string name="llaves_content">Útiles en caso de perder las originales durante un terremoto, permitiéndote acceder a tu hogar, vehículo o espacios seguros sin contratiempos</string>
    <string name="propios">Copia de tus documentos de identidad de forma física y también en la web</string>
    <string name="propios_content">asegura que puedas identificarte y acceder a servicios esenciales si los originales se pierden o dañan durante un terremoto</string>
    <string name="Otros_suministros">Otros suministros</string>
    <string name="silbato">Silbato</string>
    <string name="silbato_content">Te permite pedir ayuda y alertar a los rescatistas si estás atrapad@ o incomunicad@, sin gastar tanta energía como al gritar</string>
    <string name="repelente">Repelente de insectos</string>
    <string name="repelente_content">evita picaduras si debes estar al aire libre, protegiéndote de molestias o enfermedades</string>
    <string name="toallas">Toallitas húmedas</string>
    <string name="toallas_content">Te permiten mantener la higiene personal cuando no hay acceso a agua, ayudando a prevenir infecciones y malestar</string>
    <string name="bolsas">Bolsas de basura</string>
    <string name="bolsas_content">Útiles para manejar desechos, mantener el área limpia o incluso como protección improvisada contra lluvia o frío</string>
    <string name="ataduras">Ataduras de plástico</string>
    <string name="ataduras_content">Son prácticas para asegurar objetos, cerrar bolsas o hacer reparaciones rápidas en situaciones de emergencia</string>
    <string name="elementos">Elementos básicos de aseo personal</string>
    <string name="atencion">¡Atención!</string>
    <string name="ingresa">Ingresa tu información personal en el\ncuadro de texto</string>
    <string name="paso_necesario">Paso necesario una vez ya que\n
la app guardará tus datos, para\n
ayudarte en situaciones\n
de emergencia.</string>
</resources>