<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_weight="1"
    android:padding="20dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/verdanabold"
            android:text="@string/Terminos_Condiciones"
            android:textAlignment="center"
            android:textColor="@color/verde"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_marginBottom="38sp"/>

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/introduccion_TC"
            android:textColor="@color/blanco_texto"
            android:textSize="16sp"
            android:fontFamily="@font/roboto"
            android:layout_marginBottom="56sp"/>

        <TextView
            android:id="@+id/textView5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/requisitos_titulo"
            android:textColor="@color/verde"
            android:textSize="18sp"
            android:fontFamily="@font/verdanabold"
            android:textStyle="bold"
            android:layout_marginBottom="16sp"/>

        <TextView
            android:id="@+id/textView6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/requisitos_texto"
            android:textColor="@color/blanco_texto"
            android:textSize="16sp"
            android:fontFamily="@font/roboto"
            android:layout_marginBottom="56sp"/>

        <TextView
            android:id="@+id/textView7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/limitaciones_titulo"
            android:textColor="@color/verde"
            android:textSize="18sp"
            android:fontFamily="@font/verdanabold"
            android:textStyle="bold"
            android:layout_marginBottom="16sp"/>

        <TextView
            android:id="@+id/textView8"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/limitaciones_texto"
            android:textColor="@color/blanco_texto"
            android:textSize="16sp"
            android:fontFamily="@font/roboto"
            android:layout_marginBottom="56sp"/>

        <TextView
            android:id="@+id/textView9"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/modificaciones_titulo"
            android:textColor="@color/verde"
            android:textSize="18sp"
            android:fontFamily="@font/verdanabold"
            android:textStyle="bold"
            android:layout_marginBottom="16sp"/>

        <TextView
            android:id="@+id/textView10"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/modificaciones_texto"
            android:textColor="@color/blanco_texto"
            android:textSize="16sp"
            android:fontFamily="@font/roboto"
            android:layout_marginBottom="82sp"/>

        <CheckBox
            android:id="@+id/checkbox_accept_terms"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:buttonTint="@color/verde"
            android:text="@string/aceptar_Checkbox"
            android:textColor="@color/blanco_texto" />

        <Button
            android:id="@+id/button_accept"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="@drawable/main_button"
            android:text="@string/aceptar_boton_TC"
            android:textColor="@color/blanco_texto"
            android:layout_marginBottom="73dp"/>

    </LinearLayout>
</ScrollView>