<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:layout_width="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".CamposConfig"
    android:padding="28sp">


    <TextView
        android:id="@+id/tituloDatos"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30sp"
        android:layout_marginBottom="30sp"
        android:fontFamily="@font/verdanabold"
        android:text="@string/datos_Personales"
        android:textAlignment="center"
        android:textColor="@color/blanco_texto"
        android:textSize="20sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/nameText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/nombre_Apellido"
        android:textColorHint="@color/hint"
        android:inputType="text"
        android:background="@drawable/campo_perfil_lleno"
        android:textColor="@color/blanco_texto"
        android:fontFamily="@font/roboto"
        android:textSize="18sp"
        android:padding="15dp"
        android:layout_marginBottom="20sp"/>

    <EditText
        android:id="@+id/phoneText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/numero_celular"
        android:textColorHint="@color/hint"
        android:inputType="phone"
        android:background="@drawable/campo_perfil_lleno"
        android:textColor="@color/blanco_texto"
        android:fontFamily="@font/roboto"
        android:textSize="18sp"
        android:padding="15dp"
        android:layout_marginBottom="20sp"/>

    <Button
        android:id="@+id/saveButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="50sp"
        android:background="@drawable/rounded_button"
        android:fontFamily="@font/verdanabold"
        android:text="@string/guardar_datos"
        android:textColor="@color/blanco_texto"
        android:textSize="20sp"
        android:textStyle="bold" />
</LinearLayout>