<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/rojo_fondo"
    android:gravity="center"
    android:clickable="true">


    <LinearLayout
        android:layout_width="330dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@drawable/fondo_contenido">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="15dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="15dp">

                <TextView
                    android:id="@+id/textView24"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/verdanabold"
                    android:text="@string/atencion"
                    android:textColor="@color/rojo_texto"
                    android:textSize="30sp"
                    android:textStyle="bold"
                    android:layout_marginStart="20dp"/>

                <TextView
                    android:id="@+id/textView25"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/ingresa"
                    android:fontFamily="@font/roboto"
                    android:textSize="16sp"
                    android:textColor="@color/blanco_texto"
                    android:layout_marginStart="20dp"/>
            </LinearLayout>

            <ImageButton
                android:id="@+id/closeButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/closebutton"
                android:layout_marginEnd="12dp"
                android:layout_marginStart="-45dp"
                android:background="#00777777"/>
        </LinearLayout>

        <TextView
            android:id="@+id/textView23"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/paso_necesario"
            android:textColor="@color/blanco_texto"
            android:textSize="18sp"
            android:fontFamily="@font/roboto"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="30dp"/>
    </LinearLayout>

</LinearLayout>